Fix spacing in principle paragraphs

--- a/css/custom.css
+++ b/css/custom.css
@@ -61,8 +61,17 @@ footer {
     left: 0;
 }
 
+.bg-1 p, .bg-2 p, .bg-3 p, .bg-4 p {
+    font-family: OpenSans;
+    font-size: 18px;
+    letter-spacing: 0;
+}
 .bg-3 h3, .bg-4 h3  {
     color: #333;
+}
+
+.bg-1 h3, .bg-2 h3, .bg-3 h3, .bg-4 h3 {
+    margin-bottom: 0px;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
